--- a/Desktop/gogfood2/package.json
+++ b/Desktop/gogfood2/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendyol-js/react-carousel": "^3.0.2",
+    "better-react-carousel": "^1.1.1",
+    "bootstrap": "^5.2.3",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-router": "^6.11.1",
